<resources>
    <string name="app_name">Keep Up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Keep Up</string>
    <string name="nav_header_subtitle">Conscientiousness is the goal</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_new_timer">New Timer Group</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="timer_group_title">Group Title</string>
    <string name="add_timer">Add Timer</string>
    <string name="zero">0</string>
    <string name="okay">Okay</string>
    <string name="delete">Delete</string>
    <string name="delete_timer">Delete Timer</string>
    <string name="timer_count">%1$s Timers</string>
</resources>