<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cmuhatia.android.keepup.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_new_timer"
        android:name="com.cmuhatia.android.keepup.ui.timer.TimerGroupFragment"
        android:label="@string/menu_new_timer"
        tools:layout="@layout/fragment_new_timer" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.cmuhatia.android.keepup.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>